<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorYellow"
        tools:context=".Login.ForgotPassword.ForgotPasswordActivity">


    <TextView
            android:id="@+id/tvForgotYourPassword"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="130dp"
            android:fontFamily="@font/proxima_nova_regular"
            android:gravity="center"
            android:textColor="@color/colorLightBlack"
            android:textSize="@dimen/_19sdp"
            android:text="@string/forgot_your_pasword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <TextView
            android:id="@+id/tvEnterEmail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center"
            android:textSize="@dimen/_14sdp"
            android:textColor="@color/colorPrimary"
            app:layout_constraintTop_toBottomOf="@+id/tvForgotYourPassword"
            android:text="@string/enter_you_email_below_to_receive_your_password_reset_instructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp" android:layout_marginStart="32dp" android:layout_marginEnd="32dp"/>


    <RelativeLayout
            android:id="@+id/nameLayout"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:paddingTop="24dp"
            android:paddingBottom="24dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:background="@drawable/white_bg_rounded"
            app:layout_constraintTop_toBottomOf="@+id/tvEnterEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="24dp"
            app:layout_constraintStart_toStartOf="parent">

        <TextView
                android:id="@+id/tvName"
                android:text="@string/email"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/colorPrimary"
                android:layout_marginStart="2dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="abc@gmail.com"
                android:imeOptions="actionNext"
                android:layout_below="@+id/tvName"
                android:textSize="@dimen/_16sdp"
                android:background="@null"
                android:fontFamily="@font/proxima_nova_regular"
                android:textColor="@color/colorBlack"
        />


    </RelativeLayout>


    <TextView
            android:id="@+id/btnSignIn"
            android:text="@string/send_password"
            android:textAllCaps="true"
            android:layout_centerHorizontal="true"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:paddingStart="48dp"
            android:paddingEnd="48dp"
            android:textSize="@dimen/_14sdp"
            android:textColor="@color/colorWhite"
            android:background="@drawable/color_primary_bg_rounded"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/proxima_nova_semibold"
            app:layout_constraintTop_toBottomOf="@+id/nameLayout"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"/>

    <TextView
            android:id="@+id/tvClose"
            app:layout_constraintTop_toBottomOf="@+id/btnSignIn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/proxima_nova_regular"
            android:gravity="center"
            android:textColor="@color/colorLightBlack"
            android:textSize="@dimen/_16sdp"
            android:text="@string/close"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    <ProgressBar
            android:id="@+id/progressBar"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>