<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#555555"
        tools:context=".RegisterSale.RegisterSaleActivity">

    <include
            android:id="@+id/toolbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            layout="@layout/toolbar"/>

    <ScrollView android:layout_width="match_parent"
                android:layout_below="@+id/toolbar"
                android:layout_height="match_parent">

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


            <FrameLayout
                    android:id="@+id/content_frame"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="32dp"
                    android:layout_width="250dp"
                    android:layout_height="250dp"/>


            <TextView
                    android:id="@+id/t1"
                    android:layout_marginTop="24dp"
                    android:text="@string/place_the_code_inside_the_frame"
                    android:textColor="@color/colorWhite"
                    android:textSize="15sp"
                    android:layout_below="@+id/content_frame"
                    android:fontFamily="@font/proxima_nova_regular"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:layout_height="wrap_content"/>
            <TextView
                    android:id="@+id/t2"
                    android:text="@string/or"
                    android:layout_marginTop="16dp"
                    android:textColor="@color/colorWhite"
                    android:layout_below="@+id/t1"
                    android:fontFamily="@font/proxima_nova_semibold"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:layout_height="wrap_content"/>


            <EditText
                    android:id="@+id/etWriteManually"
                    android:layout_marginTop="16dp"
                    android:layout_width="match_parent"
                    android:gravity="center|start"
                    android:layout_centerHorizontal="true"
                    android:padding="12dp"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="40dp"
                    android:background="@drawable/white_bg"
                    android:layout_below="@+id/t2"
                    android:hint="@string/write_manually"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:id="@+id/btnSubmit"
                    android:text="@string/submit"
                    android:textAllCaps="true"
                    android:layout_below="@+id/etWriteManually"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="38dp"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:paddingStart="40dp"
                    android:paddingEnd="40dp"
                    android:textSize="15sp"
                    android:layout_marginBottom="16dp"
                    android:textColor="@color/colorLightBlack"
                    android:background="@drawable/yellow_bg_rounded"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/proxima_nova_semibold"
            />


        </RelativeLayout>

    </ScrollView>


    <ProgressBar
            android:id="@+id/progressBar"
            android:visibility="gone"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
</RelativeLayout>