<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:background="@color/colorBlueApp"
        tools:context=".Login.LoginActivity">

    <LinearLayout
            android:id="@+id/heading"
            android:padding="12dp"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_height="wrap_content">

        <TextView
                android:id="@+id/signin"
                android:text="@string/login"
                android:fontFamily="@font/proxima_nova_semibold"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_18sdp"
                android:layout_gravity="center"
                android:layout_marginEnd="16dp"
                android:gravity="center|end"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>

        <TextView
                android:id="@+id/signup"
                android:text="@string/register"
                android:fontFamily="@font/proxima_nova_semibold"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_18sdp"
                android:layout_marginStart="16dp"
                android:layout_gravity="center"
                android:alpha="0.5"
                android:gravity="center|start"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>
    </LinearLayout>

    <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            app:layout_constraintTop_toBottomOf="@+id/heading"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_height="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


            <FrameLayout
                    android:id="@+id/frameLayout"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"/>


            <TextView
                    android:id="@+id/dontHaveAnAccount"
                    app:layout_constraintTop_toBottomOf="@+id/frameLayout"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:text="@string/don_t_have_an_account"
                    android:layout_marginTop="16dp"
                    android:gravity="center"
                    android:visibility="visible"
                    android:textColor="@color/colorYellow"
                    android:textSize="@dimen/_16sdp"
                    android:fontFamily="@font/proxima_nova_regular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:id="@+id/alreadyHaveAnAccount"
                    app:layout_constraintTop_toBottomOf="@+id/frameLayout"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:text="@string/already_have_an_account"
                    android:visibility="invisible"
                    android:layout_marginTop="30dp"
                    android:gravity="center"
                    android:enabled="false"
                    android:clickable="false"
                    android:textColor="@color/colorYellow"
                    android:textSize="@dimen/_16sdp"
                    android:fontFamily="@font/proxima_nova_regular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>


            <CheckBox
                    android:id="@+id/cbTerms"
                    app:layout_constraintTop_toBottomOf="@+id/alreadyHaveAnAccount"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="22dp"
                    android:buttonTint="@color/colorWhite"
                    android:checked="true"
                    android:layout_marginTop="16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"/>


            <TextView
                    android:id="@+id/tvTerms"
                    app:layout_constraintStart_toEndOf="@+id/cbTerms"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:text="@string/by_signing_you_are_agreeing_to_the_terms_conditions_and_the_privacy_policy"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_12sdp"
                    android:paddingBottom="24dp"
                    android:fontFamily="@font/proxima_nova_regular"
                    android:layout_width="0dp"
                    android:layout_marginEnd="16dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="@+id/cbTerms"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginTop="3dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>